@@ -16,6 +16,7 @@
 * Update - Remove Account in the old Settings page.
 * Update - Bump minimum supported version of WooCommerce from 5.2 to 5.3.
 * Update - Bump minimum supported version of WordPress from 5.5 to 5.6.
+* Fix - Stop refund process when using an invalid amount
 
 = 2.7.1 - 2021-07-26 =
 * Fix - Ensure test mode setting value is correctly saved.
